finished some stuff

--- a/m3-w7d5-mvc_view_part2_exercises/src/main/webapp/css/siteTile.css
+++ b/m3-w7d5-mvc_view_part2_exercises/src/main/webapp/css/siteTile.css
@@ -55,4 +55,74 @@ section {
 	min-height: 450px;
 	background-color: #FFF;
 	border-radius: 7px;
+	float: center;
 }
+
+h3 {
+	
+	font-size:30px;
+	
+	
+}
+
+p {
+	
+	font-size: 20px;
+	
+	
+}
+
+
+
+.stars {
+	width: 20%;
+	
+}
+
+
+
+
+	
+	.bold {
+	
+	font-weight: bold;
+	
+	}
+	
+	.below {
+	position: block;
+	}
+	
+	.mainLoop {
+	
+	
+	float: left;
+		
+		
+}
+	
+	.mainPicture {
+	
+	position: inline;
+	float: left;
+	width: 21%;
+	
+	}
+	
+	
+	.inline {
+	position: inline;
+	}
+	
+	.notPicture {
+	
+	position: inline;
+	float: left;
+
+	}
+	
+	.price {
+	
+	color: maroon;
+	
+	}
