--- a/m3-w7d5-mvc_view_part2_exercises/src/main/webapp/css/siteList.css
+++ b/m3-w7d5-mvc_view_part2_exercises/src/main/webapp/css/siteList.css
@@ -69,7 +69,7 @@ hr {
 
 
 #mainDiv {
-	background-color: orange;
+	background-color: #FFF;
 	text-align:left;
 	padding-bottom:5px;
 
@@ -82,7 +82,7 @@ hr {
 
 #imageDiv {
 	
-	background-color:pink;
+	background-color:#FFF;
 	display:inline-block;
 	float: left;
 	margin-left: 40px;
@@ -91,7 +91,7 @@ hr {
 }
 
 #detailsDiv {
-	background-color: tan;
+	background-color: #FFF;
 	display:inline-block;
 	width:40%;
 }
@@ -99,34 +99,34 @@ hr {
 
 
 #title {
-	background-color: pink;
+	background-color: #FFF;
 	text-align: left;
 	display:block;
 }
 
 #bestSeller {
-	background-color: green;
+	background-color: #FFF;
 	text-align: left;
 	font-weight: bold;
 	display:block;
 }
 
 #manufacturer {
-	background-color: aqua;
+	background-color: #FFF;
 	text-align: left;
 	display: block;
 }
 
 #price {
 	color: maroon;
-	background-color: brown;
+	background-color: #FFF;
 	text-align: left;
 	display:block;
 
 }
 
 #weight {
-	background-color: red;
+	background-color: #FFF;
 	font-weight: bold;
 	text-align: left;
 	display:block;
@@ -134,6 +134,6 @@ hr {
 
 .stars {
 	width: 20%;
-	background-color: yellow;
+	background-color: #FFF;
 	display: block;
 }
