editing css of products page

--- a/m3-w7d5-mvc_view_part2_exercises/src/main/webapp/css/siteList.css
+++ b/m3-w7d5-mvc_view_part2_exercises/src/main/webapp/css/siteList.css
@@ -109,6 +109,14 @@ hr {
 	text-align: left;
 	font-weight: bold;
 	display:block;
+	color: red;
+}
+
+#name{
+	
+	font-weight: bold;
+	
+	
 }
 
 #manufacturer {
@@ -118,7 +126,7 @@ hr {
 }
 
 #price {
-	color: maroon;
+	color: red;
 	background-color: #FFF;
 	text-align: left;
 	display:block;
