--- a/m3-w7d5-mvc_view_part2_exercises/src/main/webapp/css/siteTile.css
+++ b/m3-w7d5-mvc_view_part2_exercises/src/main/webapp/css/siteTile.css
@@ -9,6 +9,14 @@ body, header, nav {
 	margin: 0px;
 }
 
+
+#main-content{
+	
+	text-align:center;
+	
+	
+}
+
 header {
 	background-color: #0099CC;
 	color: white;
