--- a/m3-w7d5-mvc_view_part2_exercises/src/main/webapp/css/detail.css
+++ b/m3-w7d5-mvc_view_part2_exercises/src/main/webapp/css/detail.css
@@ -9,6 +9,14 @@ body, header, nav {
 	margin: 0px;
 }
 
+
+#main-content{
+	
+	text-align:center;
+	
+	
+}
+
 header {
 	background-color: #0099CC;
 	color: white;
@@ -60,71 +68,87 @@ section {
 
 .stars {
 	position: inline-block;
-	height: 7%;
-	padding: 2px;
+	height:18%;
+	padding:2px;
+
 }
 
-.bold {
+	
+	.bold {
+	
 	font-weight: bold;
-}
+	
+	}
 
-.1stRowHeight {
+	.1stRowHeight{
+	
 	height: 450px;
-}
+	}
+	
+	
+	#price{
+	
+	color: red;
+	
+	}
+	
+	
 
-.7thRowHeight {
+	
+
+	
+	.7thRowHeight{
+	
 	height: 30px;
-}
-
-
-#mainPicture {
+	}
+	
+	#mainPicture{
 	background-color: orange;
-	height: 40px;
-}
-
-#bigBigDiv {
-	display: inline;
-	text-align: center; 
-	background-color:tan;
-}
 	
-#bigDiv { position : relative;
-	display: inline;
-	float:right;
-
-	width:70%;
-position: relative;
-top:-50px;
-right:100px;
-}
-
-#titleDiv {
-	width: 12%;
-	
-	width:18%;
+	height: 250px;
 	position:relative;
-	top:130px;
-	left:130px;
+	right:100px;
+	}
 	
-}
-
-#productTable {
+	#infoDiv{
+	
 	display: inline-block;
-	width: 15%;
-}
+	text-align: center;
+	
+	}
+	
 
-#titleTable {
+	
+	#productTable{
+display:inline-block;
+	width: 20%;
+	font-size: 15px;
 	position: relative;
-	top: 100px; float : left;
-	width: 10%;
-	display: inline-block;
-	float: left;
-}
-
-#productTablesDiv {
+	bottom: 100px;
+	right: 30px;
+	}
 	
-}
+	#titleTable{
+	width:10%;
 
-tr:nth-child(even) {
-	background-color: #f2f2f2;
-}
+	
+	}
+	
+	#descriptionDiv{
+	
+	width:40%;
+	position:relative;
+	left:430px;
+	bottom: 70px;
+	}
+
+	p{
+	font-size: 15px;
+	}
+	
+	
+	#price{
+	
+	text-color: red;
+	
+	}
