--- a/m3-w8d2-controllers_part1_exercises/src/main/webapp/css/site.css
+++ b/m3-w8d2-controllers_part1_exercises/src/main/webapp/css/site.css
@@ -7,6 +7,7 @@
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
@@ -14,6 +15,17 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+#name{
+	
+	display:inline-block;
+}
+
+
+#submitButton{
+	
+	display: inline-block;
+
 }
 
 
