--- a/SpringBootSampleWebApp-jsp/src/main/webapp/css/style.css
+++ b/SpringBootSampleWebApp-jsp/src/main/webapp/css/style.css
@@ -1,3 +1,24 @@
+body
+{
+ width:100%;
+ margin:0 auto;
+ padding:0px;
+ font-family:helvetica;
+ background-color:#0B3861;
+}
+#wrapper
+{
+ text-align:center;
+ margin:0 auto;
+ padding:0px;
+ width:995px;
+}
+#output_image
+{
+ max-width:300px;
+}
+
+
 #infoDiv{
 	
 	text-align: center;
@@ -41,3 +62,4 @@
 	width: 500px;
 	background-color:powderblue;
 }
+
